@@ -254,6 +254,7 @@ public class ArtUtils {
 		databaseTypes.put("other", "Other");
 		databaseTypes.put("hbase-phoenix", "HBase (Phoenix driver) - driver not included"); //adds 50MB
 		databaseTypes.put("msaccess-ucanaccess", "MS Access (UCanAccess driver)");
+		databaseTypes.put("msaccess-ucanaccess-password", "MS Access with password (UCanAccess driver)");
 		databaseTypes.put("sqlite-xerial", "SQLite (Xerial driver)");
 		databaseTypes.put("csv-csvjdbc", "CSV (CsvJdbc driver)");
 		databaseTypes.put("h2-server", "H2 Server");
