@@ -1,4 +1,5 @@
 ART 3.1
+* Accomodate reporting from password protected MS Access files
 * Updated sqlite driver to 3.20.1
 * Updated jxls to 2.4.2
 
